# QuantX-Engine

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/: FUNDING.yml
app/: page.tsx
components/: backtest-interface.tsx  iv-surface-view.tsx  order-book-view.tsx  performance-monitor.tsx  signal-generator.tsx  trading-dashboard.tsx
config/: config.json
scripts/: cost_simulator.py  create_database.sql  deploy.sh  export_models_to_onnx.py  market_data_generator.py  setup.sh  signal_generator.py
src/: main.cpp
src/core/: market_data_handler.cpp  market_data_handler.hpp
src/ml/: onnx_predictor.cpp  onnx_predictor.hpp
src/risk/: risk_manager.cpp  risk_manager.hpp
src/trading/: order_manager.hpp  paper_trading.cpp
tests/: test_main.cpp
